Update #6: Footer Hotfix + Minor Stylesheet Changes

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,14 @@
 	<head>
 
 		<link rel="styleSheet" type="text/css" href="stylesheet.css" > 
-
+		
+		<title>
+			
+			Profile
+			
+		</title>
+		
+		<meta name="description" content="David Garcia's Profile Page">
 
 	</head>
 
@@ -72,7 +79,7 @@
 			
 				<p>
 
-					<img class="text" style=" width: 170px; height: 200px; margin-right: 10px;" title="David Garcia (me)" src="/img/Picture.jpeg"> 
+					<img class="text-img" alt="Mugshot of David" style=" width: 170px; height: 200px; margin-right: 10px;" title="David Garcia (me)" src="/img/Picture.jpeg"> 
 
 						Seems like you are interested about reading some of me then let us start with some information about me.
 						My name is David as you can probably already tell and I am 19 years old by now instead of the 18 you maybe 
@@ -201,7 +208,7 @@
 		
 		<footer>
 			
-			<aside>
+			<aside class="footer-aside">
 			
 				<ul style="margin-left: 57px; margin-right: 57px;">
 				
